kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/constraintchecker_tests/invalid/001_cyclicinheritance_03.kmt
/* $Id: 001_cyclicinheritance_03.kmt,v 1.2 2007-10-16 11:49:09 ftanguy Exp $ */

// Test of a invalid inheritance

package root_package;

require kermeta

/* cycle inheritance*/
class A inherits B{
    
}
class B inherits C{
    
}

class C inherits A{
    
}
